--- a/package.json
+++ b/package.json
@@ -3,9 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sievo/react-common-components": "^1.1.42",
+    "bootstrap": "^4.2.1",
+    "classnames": "^2.2.6",
+    "date-fns": "^2.0.0-alpha.27",
+    "immutable": "^4.0.0-rc.12",
+    "moment": "^2.23.0",
     "react": "^16.7.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-redux": "^6.0.0",
+    "react-scripts": "2.1.3",
+    "recompose": "^0.30.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
