--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@sievo/react-common-components": "^1.1.42",
     "bootstrap": "^4.2.1",
     "classnames": "^2.2.6",
+    "core-js": "^2.6.3",
     "date-fns": "^2.0.0-alpha.27",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.23.0",
