--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@sievo/react-common-components": "^1.1.42",
     "bootstrap": "^4.2.1",
     "classnames": "^2.2.6",
     "core-js": "^2.6.3",
@@ -14,7 +13,7 @@
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.23.0",
     "react": "^16.7.0",
-    "react-bootstrap": "^0.32.4",
+    "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
